# DB_project

./: .gitignore  README.md  main.py  pyproject.toml
src/: abstract_classes.py  config.py  db_manager.py  hh_parser.py  json_saver.py  utils.py
