[tool.poetry]
name = "course-work-5"
version = "0.1.0"
description = ""
authors = ["StepanShurmin <shurmin.sa@gmail.com>"]
readme = "README.md"
packages = [{include = "course_work_5"}]

[tool.poetry.dependencies]
python = "^3.11"
black = {extras = ["d"], version = "^23.7.0"}


[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
psycopg2 = "^2.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
